ch-8 Live Capturing and Filtering Results

--- a/ch-8/第8章：网络包的处理：.md
+++ b/ch-8/第8章：网络包的处理：.md
@@ -76,3 +76,67 @@ lo
 清单8-2：显示可用网络接口的输出
 
 输出列出了可用的网络接口—— `enp0s5，any 和 lo` ——也就是他们的IPv4和IPv6地址和掩码。每个系统上的输出可能与这些网络细节不同，但应该足够相似，以便您能够理解这些信息。 
+
+## 实时抓包和过滤结果
+
+既然您已经知道如何查询可用设备，那么就可以使用 `gopacket` 的特性来实时抓取数据包。在此过程中，还将使用**BPF** 语法过滤数据包集。**BPF** 能够限制抓取和显示的内容，以便只看相关的流量。通常根据协议和端口过滤流量。例如，可以创建一个过滤器来查看发送到端口80的所有TCP流量。还可以根据目标主机过滤流量。对BPF语法完整的论述超出了本书的范围。有关使用BPF的其他方法，请查看 *http://www.tcpdump.org/manpages/pcap-filter.7.html* 。
+
+清单8-3显示了过滤流量的代码，以便只抓取发送到端口80或从端口80发送的TCP流量。
+
+```go
+package main
+
+import (
+	"fmt"
+	"log"
+
+	"github.com/google/gopacket"
+	"github.com/google/gopacket/pcap"
+)
+
+var (
+	iface    = "enp0s5"
+	snaplen  = int32(1600)
+	promisc  = false
+	timeout  = pcap.BlockForever
+	filter   = "tcp and port 80"
+	devFound = false
+)
+
+func main() {
+	devices, err := pcap.FindAllDevs()
+	if err != nil {
+		log.Panicln(err)
+	}
+
+	for _, device := range devices {
+		if device.Name == iface {
+			devFound = true
+		}
+	}
+	if !devFound {
+		log.Panicf("Device named '%s' does not exist\n", iface)
+	}
+
+	handle, err := pcap.OpenLive(iface, snaplen, promisc, timeout)
+	if err != nil {
+		log.Panicln(err)
+	}
+	defer handle.Close()
+
+	if err := handle.SetBPFFilter(filter); err != nil {
+		log.Panicln(err)
+	}
+
+	source := gopacket.NewPacketSource(handle, handle.LinkType())
+	for packet := range source.Packets() {
+		fmt.Println(packet)
+	}
+}
+```
+
+清单 8-3: 使用 BPF 过滤抓取特定的网络流量 (https://github.com/blackhat-go/bhg/ch-8/filter/main.go/)
+
+代码首先定义设置抓包所需的几个变量。其中包括要抓取数据接口的名称，快照长度（每帧捕获的数据量），`promisc` 变量（表示是否运行承诺模式），和 `time-out`。还有BPF过滤器：`tcp and port 80`。这样就能只抓取符合这些条件的包。
+
+在 `main()` 函数内，枚举可用的设备，遍历它们以确定所要的捕获接口是否存在于设备列表中。如果接口名不存在就 `panic`，说明这是无效的。
