ch-8 Sniffing and Displaying Cleartext User Credentials

--- a/ch-8/第8章：网络包的处理：.md
+++ b/ch-8/第8章：网络包的处理：.md
@@ -164,3 +164,10 @@ PACKET: 74 bytes, wire length 74 cap length 74 @ 2020-04-26 08:44:43.086706 -050
 清单 8-4: 抓包日志
 
 虽然原始输出不是很容易理解，但却有很好的分层。现在可以使用函数，如 `packet.ApplicationLayer() 和 packet.Data()` 来检索单个层或整个包的原始字节。当使用 `hex .Dump()` 结合输出时，就可以以易读的方式显示内容。可以自己尝试一下。
+
+## 嗅探并明文显示用户凭证
+
+现在编译代码。复用其他工具的一些功能，以嗅探并明文显示用户凭证。
+
+现在，大多数组织使用交换网络进行操作，交换网络直接在两个端点之间发送数据，而不是广播发送，这使得在企业环境中被动地抓包变得更加困难。但是，接下来的明文嗅探攻击配合像 `Address Resolution Protocol (ARP) ` 毒剂这样的东西非常有用。
+
