ch-8 Port Scanning Through SYN-flood Protections

--- a/ch-8/第8章：网络包的处理：.md
+++ b/ch-8/第8章：网络包的处理：.md
@@ -250,3 +250,12 @@ PASS passw0rd
 ```
 
 当然也可以优化代码。本例中，如果数据中含有 `USER` 或 `PASS` 就输出该数据。实际上，代码应该只搜索有效数据的开头部分，以消除当这些关键字作为在客户端和服务器之间传输的文件内容的一部分出现，或者是更长的单词(如PASSAGE或ABUSER)的一部分出现时的误报。鼓励您将该改进作为学习。
+
+## 通过SYN-flood保护的端口扫描
+
+在第2章中已经了解了端口扫描器的创建过程。通过多次迭代来改进代码，直到实现可以高性能产出准确的结果。然而，某些情况下，扫描器任然会产出错误的结果。特别地，当组织使用 **SYN-flood** 保护时，通常所有的端口——打开、关闭和过滤的相似点——都会产生相同的包交换，表示端口是打开的。这些保护措施被称为 **SYN cookie** ，防止 **SYN-flood** 攻击和模糊攻击面，产生误报。
+
+当目标使用 **SYN cookie** 时，如何确定是服务监听的端口，还是设备错误地显示端口是打开的？毕竟这两种情况下，都能完成TCP的三次握手。大多数的工具和扫描器（包括Nmap）都会查看这个序列（或者它的一些变体，基于所选择的扫描类型），以确定端口的状态。因此，不能依赖这些工具来产生准确的结果。
+
+然而，如果考虑在建立了一个连接——数据交换——之后会发生什么，也许是以服务标语的形式——可以推断出实际的服务是否正在响应。**SYN-flood** 保护一般不会交换除最初三次握手之外的包，除非有服务正在监听，因此，存在任何附加包的话表明可能存在服务。
+
