ch-8 Checking TCP Flags

--- a/ch-8/第8章：网络包的处理：.md
+++ b/ch-8/第8章：网络包的处理：.md
@@ -259,3 +259,22 @@ PASS passw0rd
 
 然而，如果考虑在建立了一个连接——数据交换——之后会发生什么，也许是以服务标语的形式——可以推断出实际的服务是否正在响应。**SYN-flood** 保护一般不会交换除最初三次握手之外的包，除非有服务正在监听，因此，存在任何附加包的话表明可能存在服务。
 
+### 检查TCP Flag
+
+为了解释 **SYN cookie**，必须扩展端口扫描功能，当建立连接后通过查看是否从目标处收到了除三次握手之外的包。可以通过嗅探数据包来完成，查看是否有数据包使用TCP Flag 值进行传输，该值指示附加的合法服务通信。
+
+TCP Flag表示关于包传输状态的信息。如果查看TCP手册，会发现 flag 存储在包头部第14个位置的单个字节中。该字节的每一位代表一个Flag值。如果该位置的位设置为1，则flag为“on”;如果该位设置为0，则flag为“off”。根据TCP规范，表8-1显示了flag在字节中的位置。
+
+**表 8-1：** TCP Flag 及在字节中的位置
+
+| **Bit**  |  7   | 6    |  5   |  4   |  3   |  2   |  1   | 0    |
+| :------: | :--: | ---- | :--: | :--: | :--: | :--: | :--: | ---- |
+| **Flag** | CWR  | ECE  | URG  | ACK  | PSH  | RST  | SYN  | FIN  |
+
+知道了Flag 的位置就能创建过滤器检测他们。例如，可以查找包含下面 Flag 的包，这些 Flag 可能指示监听服务：
+
+- ACK 和 FIN
+- ACK
+- ACK 和 PSH
+
+因为使用 `gopacket` 库可以抓取并过滤某些包，可以构建连接远程服务的程序，嗅探数据包，并仅显示与这些TCP头通信的数据包的服务。假定所有其他服务由于SYN cookie而被错误地“打开”。
