ch-8 Building the BPF Filter

--- a/ch-8/第8章：网络包的处理：.md
+++ b/ch-8/第8章：网络包的处理：.md
@@ -278,3 +278,22 @@ TCP Flag表示关于包传输状态的信息。如果查看TCP手册，会发现
 - ACK 和 PSH
 
 因为使用 `gopacket` 库可以抓取并过滤某些包，可以构建连接远程服务的程序，嗅探数据包，并仅显示与这些TCP头通信的数据包的服务。假定所有其他服务由于SYN cookie而被错误地“打开”。
+
+### 构建 BPF 过滤器
+
+BPF 过滤器需要检查指示包传输的特定 flag 值。假如前面提到的 flag 是开启的，则 flag 字节有以下值：
+
+- ACK 和 FIN: 00010001 (0x11)
+- ACK: 00010000 (0x10)
+- ACK 和 PSH: 00011000 (0x18)
+
+为了清晰起见，使用了和二进制值相等的十六进制，因为在过滤器中使用十六进制值。
+
+总而言之，需要检查TCP报头的第14字节(基于0的索引的偏移量为13)，仅过滤flag为0x11、0x10或0x18的数据包。下面是BPF过滤器的样子：
+
+```go
+tcp[13] == 0x11 or tcp[13] == 0x10 or tcp[13] == 0x18
+```
+
+太棒了，现在有过滤器了。
+
