ch-8 Writing the Port Scanner

--- a/ch-8/第8章：网络包的处理：.md
+++ b/ch-8/第8章：网络包的处理：.md
@@ -297,3 +297,160 @@ tcp[13] == 0x11 or tcp[13] == 0x10 or tcp[13] == 0x18
 
 太棒了，现在有过滤器了。
 
+### 编写端口扫描器
+
+现在，您将使用过滤器来构建实用程序，该实用程序将建立完整的TCP连接，并检查除三次握手之外的数据包，以查看是否传输了其他数据包，从而表明有真实的服务正在监听。程序如清单8-6所示。为了简单起见，没有对代码的性能做优化。但是，可以通过第2章中类似的优化来改进代码。
+
+```go
+package main
+
+import (
+	"fmt"
+	"log"
+	"net"
+	"os"
+	"strings"
+	"time"
+
+	"github.com/google/gopacket"
+	"github.com/google/gopacket/pcap"
+)
+
+var (
+	snaplen  = int32(320)
+	promisc  = true
+	timeout  = pcap.BlockForever
+	filter   = "tcp[13] == 0x11 or tcp[13] == 0x10 or tcp[13] == 0x18"
+	devFound = false
+	results  = make(map[string]int)
+)
+
+func capture(iface, target string) {
+	handle, err := pcap.OpenLive(iface, snaplen, promisc, timeout)
+	if err != nil {
+		log.Panicln(err)
+	}
+	defer handle.Close()
+
+	if err := handle.SetBPFFilter(filter); err != nil {
+		log.Panicln(err)
+	}
+
+	source := gopacket.NewPacketSource(handle, handle.LinkType())
+	fmt.Println("Capturing packets")
+	for packet := range source.Packets() {
+		networkLayer := packet.NetworkLayer()
+		if networkLayer == nil {
+			continue
+		}
+		transportLayer := packet.TransportLayer()
+		if transportLayer == nil {
+			continue
+		}
+
+		srcHost := networkLayer.NetworkFlow().Src().String()
+		srcPort := transportLayer.TransportFlow().Src().String()
+
+		if srcHost != target {
+			continue
+		}
+		results[srcPort] += 1
+	}
+}
+
+func main() {
+
+	if len(os.Args) != 4 {
+		log.Fatalln("Usage: main.go <capture_iface> <target_ip> <port1,port2,port3>")
+	}
+
+	devices, err := pcap.FindAllDevs()
+	if err != nil {
+		log.Panicln(err)
+	}
+
+	iface := os.Args[1]
+	for _, device := range devices {
+		if device.Name == iface {
+			devFound = true
+		}
+	}
+	if !devFound {
+		log.Panicf("Device named '%s' does not exist\n", iface)
+	}
+
+	ip := os.Args[2]
+	go capture(iface, ip)
+	time.Sleep(1 * time.Second)
+
+	ports, err := explode(os.Args[3])
+	if err != nil {
+		log.Panicln(err)
+	}
+
+	for _, port := range ports {
+		target := fmt.Sprintf("%s:%s", ip, port)
+		fmt.Println("Trying", target)
+		c, err := net.DialTimeout("tcp", target, 1000*time.Millisecond)
+		if err != nil {
+			continue
+		}
+		c.Close()
+	}
+	time.Sleep(2 * time.Second)
+
+	for port, confidence := range results {
+		if confidence >= 1 {
+			fmt.Printf("Port %s open (confidence: %d)\n", port, confidence)
+		}
+	}
+}
+
+func explode(portString string) ([]string, error) {
+	ret := make([]string, 0)
+
+	ports := strings.Split(portString, ",")
+	for _, port := range ports {
+		port := strings.TrimSpace(port)
+		ret = append(ret, port)
+	}
+
+	return ret, nil
+}
+```
+
+Listing 8-6: Scanning and processing packets with SYN-flood protections (https://github.com/blackhat-go/bhg/ch-8/syn-flood/main.go/)
+
+一般来说，代码中要维护数据包的计数，根据端口分组，以表示端口确实是打开的。使用过滤器只选择设置了适当 flag 的包。匹配数据包的数量越多，越能确定服务正在监听端口。
+
+代码首先定义几个变量，以便在整个过程中使用。这些变量包括过滤器和map 类型的 `results`，使用它来跟踪对端口是否打开的确定级别。 目标端口作为key，并维护匹配包的计数作为map的值。
+
+接下来定义函数 `capture()`，参数为接口名称和要测试的目标IP。函数本身以与前面示例相同的方式引导数据包抓取。然而，必须用不同的代码处理每个包。利用 `gopacket` 来提取包的网络和传输层。如果缺少这两层就忽略掉；这是因为下一步要检查包的源IP和端口，如果没有传输层或网络层的话就没有这些信息。然后再确定包的源机器IP地址是目标的。如果包的来源和IP地址不匹配就跳过处理。如果匹配就递增端口的确定等级。对后续的每个包重复此过程。匹配时就递增确定等级。
+
+`main()`函数中使用一个协成调用 `capture() ` 函数。使用协成的目的是确保抓包和处理逻辑物阻塞地并发执行。同时，`main()` 函数继续解析目标端口，一个接一个地遍历，然后调用 `net.DialTimeout` 尝试对每个进行TCP连接。协成在运行中，积极地监视这些连接尝试，寻找表示服务正在监听的包。
+
+尝试连接每个端口后，处理所有结果时，只显示确定等级为1或更高的端口（这意味着至少有一个包与该端口的过滤器匹配）。代码中有几处调用 `time.Sleep() ` 确保留有足够的时间来建立嗅探和处理包。
+
+让我们看一下程序的示例运行，如清单8-7所示。
+
+```shell
+$ go build -o syn-flood && sudo ./syn-flood enp0s5 10.1.100.100 80,443,8123,65530
+Capturing packets
+Trying 10.1.100.100:80
+Trying 10.1.100.100:443 
+Trying 10.1.100.100:8123 
+Trying 10.1.100.100:65530 
+Port 80 open (confidence: 1) 
+Port 443 open (confidence: 1)
+```
+
+清单 8-7: 带有可信等级的端口扫描结果
+
+测试成功地确定了端口80和443是开启的。同时也确定没有服务监听在端口8123 和 65530（注意，我们在示例中更改了IP地址以保护无辜者。）
+
+可以用几种方式改进代码。作为学习练习，建议添加以下增强功能：
+
+1. 从 `capture()` 函数中移除网络层和传输层逻辑和来源检查。相反，在BPF过滤器中添加额外参数来确保只抓取目标IP和端口的数据包。
+2. 用并发替代端口扫描的顺序逻辑，类似于前几章演示的那样。这能提高效率。
+3. 不是将代码限制为单个目标IP，而是允许用户提供IP或网络块的列表。
+
