--- a/ch-8/第8章：网络包的处理：.md
+++ b/ch-8/第8章：网络包的处理：.md
@@ -454,3 +454,6 @@ Port 443 open (confidence: 1)
 2. 用并发替代端口扫描的顺序逻辑，类似于前几章演示的那样。这能提高效率。
 3. 不是将代码限制为单个目标IP，而是允许用户提供IP或网络块的列表。
 
+## 总结
+
+我们已经完成了有关抓包的讨论，主要集中于被动嗅探活动。在下一章中，将重点介绍漏洞利用开发。
