--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -6,3 +6,6 @@
 
 根据研究，在2016年，一次入侵可能会给组织造成大约400万到700万美元的损失。IBM的一项研究估计，每一个被偷的记录会给组织带来129到355美元的损失。见鬼，黑帽黑客可以通过在地下市场上以每张7到80美元的价格出售信用卡来赚大钱（http://online.wsj.com/public/resources/documents/secureworks_hacker_annualreport.pdf* ）。
 
+仅Target漏洞就造成了4000万张卡片的泄露。在某些情况下，Target卡的售价高达每张135美元（*http://www.businessinsider.com/heres-what-happened-to-your-target-data-that-was-hacked-2014-10/*）。那是非常赚钱的。我们绝不提倡这种行为，但那些道德有问题的人却仍然通过盗窃数据赚钱。
+
+关于该行业的丰富知识和对在线文章的丰富参考——让我们拭目以待！在本章中，将学习如何设置和建立各种SQL和NoSQL数据库，以及如何通过Go连接并和这些数据库交互。我们还将演示如何创建数据库和文件系统数据挖掘程序，用于搜索有趣信息的关键指示符。
