ch-7 Setting Up Databases with Docker

--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -8,4 +8,11 @@
 
 仅Target漏洞就造成了4000万张卡片的泄露。在某些情况下，Target卡的售价高达每张135美元（*http://www.businessinsider.com/heres-what-happened-to-your-target-data-that-was-hacked-2014-10/*）。那是非常赚钱的。我们绝不提倡这种行为，但那些道德有问题的人却仍然通过盗窃数据赚钱。
 
-关于该行业的丰富知识和对在线文章的丰富参考——让我们拭目以待！在本章中，将学习如何设置和建立各种SQL和NoSQL数据库，以及如何通过Go连接并和这些数据库交互。我们还将演示如何创建数据库和文件系统数据挖掘程序，用于搜索有趣信息的关键指示符。
+关于该行业的丰富知识和对在线文章的丰富参考——让我们拭目以待！在本章中，将学习如何配置和建立各种SQL和NoSQL数据库，以及如何通过Go连接并和这些数据库交互。我们还将演示如何创建数据库和文件系统数据挖掘程序，用于搜索有趣信息的关键指示符。
+
+## 使用Docker配置数据库
+
+在这一节中，将安装各种数据库，然后将本章掠夺示例中使用的数据插入到数据库中。如果可能的话，在Ubuntu 18.04 VM上使用Docker。*Docker* 是个软件容器平台，能够轻松地部署和管理应用程序。可以直接捆绑部署应用程序及其依赖。容器与操作系统分开，以防止对主机平台的污染。这是很漂亮的设计。
+
+对于本章，为使用数据库将会用到各种预构建的Docker镜像。还未安装的话就先安装Docker。在*https://docs.docker.com/engine/installation/linux/ubuntu/ 可找到Ubuntu的安装说明。
+
