ch-7 Installing and Seeding MongoDB

--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -16,3 +16,71 @@
 
 对于本章，为使用数据库将会用到各种预构建的Docker镜像。还未安装的话就先安装Docker。在*https://docs.docker.com/engine/installation/linux/ubuntu/ 可找到Ubuntu的安装说明。
 
+### 安装并使用**MongoDB**
+
+*MongoDB*是在本章中唯一用到NoSQL数据库。不像传统的关系数据库，MongoDB无法通过SQL进行通信。相反，MongoDB使用易于理解的JSON语法检索和管理数据。需要用专门的整本书来解释MongoDB，而全部的解释显然超出了本书的范围。现在，安装Docker镜像，并插入假数据。
+
+和传统的SQL数据库不一样，MongoDB是*schema-less*，也就是它不用遵循用于组织表格数据的预定义的严格规则系统。这也就是为什么在清单7-1中只有 insert 命令而没有定义模式。首先，使用下面的命令安装MongoDB的Docker镜像：
+
+```shell
+$ docker run --name some-mongo -p 27017:27017 mongo
+```
+
+该命令从Docker仓库中下载名为 mongo的镜像，然后启动名为 some-mongo（给实例起的名字是任意的） 的新实例，并且将本地的27017端口映射到容器的27017端口。端口映射是关键，因为直接从操作系统访问数据库实例。没有的话就无法访问。
+
+通过列出所有运行中的容器来检查容器是否自动启动：
+
+```shell
+$ docker ps
+```
+
+万一容器没有自动启动，执行下面的命令：
+
+```shell
+$ docker start some-mongo
+```
+
+start 命令应该能让容器运行。
+
+容器运行后使用 `run` 命令传递MongoDB客户端连接到 MongoDB 实例，用这种方式就可以和数据库交互来插入数据：
+
+```shell
+$ docker run -it --link some-mongo:mongo --rm mongo sh \ 
+-c 'exec mongo "$MONGO_PORT_27017_TCP_ADDR:$MONGO_PORT_27017_TCP_PORT/store"'
+>
+```
+
+这个神奇的命令运行一个一次性的，第二个安装了MongoDB客户端二进制文件的Docker容器——所以不必在主机的操作系统上安装二进制文件——并使用它连接到名为some-mongo的 Docker容器中的MongoDB实例。在这个例子中，连接到名为 test 的数据库。
+
+清单7-1，将数组文档插入到 transactions 集合中。
+
+```json
+> db.transactions.insert([ 
+    {
+		"ccnum" : "4444333322221111", 
+        "date" : "2019-01-05", 
+        "amount" : 100.12,
+		"cvv" : "1234",
+		"exp" : "09/2020" 
+    },
+	{
+		"ccnum" : "4444123456789012", 
+        "date" : "2019-01-07",
+    	"amount" : 2400.18, 
+        "cvv" : "5544", 
+        "exp" : "02/2021"
+	}, 
+    {
+        "ccnum" : "4465122334455667", 
+        "date" : "2019-01-29", 
+        "amount" : 1450.87,
+        "cvv" : "9876",
+		"exp" : "06/2020" 
+    }
+]);
+```
+
+清单 7-1: 将 transactions 插入到 MongoDB 集合 (https://github.com/blackhat-go/bhg/ch-7/db/seed-mongo.js/)
+
+就是这样!现在，已经创建了MongoDB数据库实例，并插入了一个包含三个用于查询的虚假文档的 transactions 集合。稍后将介绍查询部分，但是首先，应该知道如何安装和插入传统SQL数据库。
+
