ch-7 Installing and Seeding PostgreSQL and MySQL Databases

--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -16,7 +16,7 @@
 
 对于本章，为使用数据库将会用到各种预构建的Docker镜像。还未安装的话就先安装Docker。在*https://docs.docker.com/engine/installation/linux/ubuntu/ 可找到Ubuntu的安装说明。
 
-### 安装并使用**MongoDB**
+### 安装**MongoDB**并写入数据
 
 *MongoDB*是在本章中唯一用到NoSQL数据库。不像传统的关系数据库，MongoDB无法通过SQL进行通信。相反，MongoDB使用易于理解的JSON语法检索和管理数据。需要用专门的整本书来解释MongoDB，而全部的解释显然超出了本书的范围。现在，安装Docker镜像，并插入假数据。
 
@@ -84,3 +84,58 @@ $ docker run -it --link some-mongo:mongo --rm mongo sh \
 
 就是这样!现在，已经创建了MongoDB数据库实例，并插入了一个包含三个用于查询的虚假文档的 transactions 集合。稍后将介绍查询部分，但是首先，应该知道如何安装和插入传统SQL数据库。
 
+### 安装**PostgreSQL 和 MySQL**并写入数据
+
+*PostgreSQL* （也叫 *Postgres*） 和 *MySQL * 是两个最常见的、最知名的、企业级质量的开源关系数据库管理系统，并且都有官方的Docker镜像。因为它们比较相似，并且安装步骤也有些重复，因此一起介绍安装。
+
+与上一节中的MongoDB示例大致相同，首先下载并允许合适的Docker镜像：
+
+```shell
+$ docker run --name some-mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=password \ -d mysql
+$ docker run --name some-postgres -p 5432:5432 -e POSTGRES_PASSWORD=password \ -d postgres
+```
+
+容器构建成功后确认是否在运行，如果没在运行中的话，通过**docker start** **name** 命令启动。
+
+接下来，使用相应的客户端连接到容器中——同样，使用Docker镜像来避免在主机上安装任何额外的文件——然后继续创建数据库并写入数据。清单7-2中是MySQL相关的逻辑。
+
+```shell
+$ docker run -it --link some-mysql:mysql --rm mysql sh -c \
+'exec mysql -h "$MYSQL_PORT_3306_TCP_ADDR" -P"$MYSQL_PORT_3306_TCP_PORT" \
+-uroot -p"$MYSQL_ENV_MYSQL_ROOT_PASSWORD"'
+mysql> create database store;
+mysql> use store;
+mysql> create table transactions(ccnum varchar(32), date date, amount float(7,2),
+	-> cvv char(4), exp date);
+```
+
+清单 7-2: 创建并初始化 MySQL 数据库
+
+与下面的清单一样，该清单启动一个一次性Docker shell，执行适当的数据库客户端。创建并连接到名为 store 的数据库，然后创建 transactions 表。这两个清单是相同的，只是针对不同的数据库系统进行了修改。、
+
+清单7-3是Postgres的逻辑，和MySQL 的语法稍微不同。
+
+```shell
+$ docker run -it --rm --link some-postgres:postgres postgres psql \ 
+-h postgres -U postgres
+postgres=# create database store;
+postgres=# \connect store
+store=# create table transactions(ccnum varchar(32), date date, amount money, cvv char(4), exp date);
+```
+
+清单 7-3: 创建并初始化 Postgres 数据库
+
+MySQL 和 Postgres 的插入 transactions 的语法是一样的。例如，清单7-4中可以看到如何向MySQL的transactions集合中插入三个文档。
+
+```shell
+mysql> insert into transactions(ccnum, date, amount, cvv, exp) values
+	-> ('4444333322221111', '2019-01-05', 100.12, '1234', '2020-09-01');
+mysql> insert into transactions(ccnum, date, amount, cvv, exp) values
+	-> ('4444123456789012', '2019-01-07', 2400.18, '5544', '2021-02-01');
+mysql> insert into transactions(ccnum, date, amount, cvv, exp) values
+	-> ('4465122334455667', '2019-01-29', 1450.87, '9876', '2019-06-01');
+```
+
+清单 7-4: 向 MySQL 的 transactions 插入数据 (https://github.com/blackhat-go/bhg/ch-7/db/seed-pg-mysql.sql/)
+
+尝试向Postgres数据库中插入同样的三个文档数据。
