ch-7 Querying MongoDB

--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -139,3 +139,68 @@ mysql> insert into transactions(ccnum, date, amount, cvv, exp) values
 清单 7-4: 向 MySQL 的 transactions 插入数据 (https://github.com/blackhat-go/bhg/ch-7/db/seed-pg-mysql.sql/)
 
 尝试向Postgres数据库中插入同样的三个文档数据。
+
+## 用Go连接并查询数据库
+
+既然现在已经多个测试数据库，那么就用Go构建客户端来连接和查询这些数据库。我们将讨论分为两个主题：一个是MongoDB，另一个是传统SQL数据库。
+
+### 查询MongoDB
+
+尽管有优秀的标准SQL包，但Go并没有维护类似的与NoSQL数据库交互的包。相反，需要依赖第三方包来方便交互。与其检阅第三方包的实现，不如只专注于MongoDB。我们将使用 *mgo* (发音为 *mango*) 这个DB驱动程序。
+
+使用下面的命令安装 *mgo* 驱动：
+
+```shell
+$ go get gopkg.in/mgo.v2
+```
+
+现在可以和 *store* 集合（等同于表）建立连接并查询，所需要的代码比稍后创建的SQL示例代码还要少（参见清单7-6）。
+
+```go
+package main
+
+import (
+	"fmt"
+	"log"
+
+	mgo "gopkg.in/mgo.v2"
+)
+
+type Transaction struct {
+	CCNum      string  `bson:"ccnum"`
+	Date       string  `bson:"date"`
+	Amount     float32 `bson:"amount"`
+	Cvv        string  `bson:"cvv"`
+	Expiration string  `bson:"exp"`
+}
+
+func main() {
+	session, err := mgo.Dial("127.0.0.1")
+	if err != nil {
+		log.Panicln(err)
+	}
+	defer session.Close()
+
+	results := make([]Transaction, 0)
+	if err := session.DB("store").C("transactions").Find(nil).All(&results); err != nil {
+		log.Panicln(err)
+	}
+	for _, txn := range results {
+		fmt.Println(txn.CCNum, txn.Date, txn.Amount, txn.Cvv, txn.Expiration)
+	}
+}
+```
+
+清单 7-6: 连接并查询 MongoDB 数据库 (https://github.com/blackhat-go/bhg/ch-7/db/mongo-connect/main.go/)
+
+先定义 `Transaction` 类型，相当于 `store` 集合中的单个文档。MongoDB中数据表示的内部机制是二进制JSON。基于此，使用标记来显式定义要在二进制JSON数据中使用的元素名称。
+
+在 `main()` 函数中，调用 `mgo.Dial()` 通过建立与数据库的连接来创建session，测试来确定没有发生错误，延迟调用来关闭session。然后使用 `session` 变量来查询 `store` 数据库，从 `transactions` 集合中检索所有记录。将结果保存在名为 `results`的 `Transaction` 类型的切片中。其背后原理是结构体的标记用于将二进制JSON解析到定义的类型中。最后，循环遍历结果集并打印。这个例子和下节的SQL示例都输出类似下面的内容：
+
+```shell
+$ go run main.go
+4444333322221111 2019-01-05 100.12 1234 09/2020 
+4444123456789012 2019-01-07 2400.18 5544 02/2021 
+4465122334455667 2019-01-29 1450.87 9876 06/2020
+```
+
