ch-7 Querying SQL Databases

--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -204,3 +204,68 @@ $ go run main.go
 4465122334455667 2019-01-29 1450.87 9876 06/2020
 ```
 
+### 查询SQL数据库
+
+Go中有一个 `database/sql` 的标准包，该包定义了用于与SQL和类似SQL的数据库进行交互的接口。基本的实现包括像连接池和事务之类的功能。遵循此接口的数据库驱动会自动继承这些功能，并且由于API在驱动之间保持一致，因此它们基本上可以互换。无论使用的是Postgres，MSSQL，MySQL还是其他驱动程序，代码中的函数调用和实现都是相同的。在客户端改动很少的代码就能方便地切换后端的数据库。当然，驱动实现了针对于特定数据库的功能，并使用不同的SQL语法，但是函数调用几乎相同。
+
+基于此，只展示连接到一个SQL数据库——MYSQL——而将其他SQL数据库留给读者作为练习。首先使用下面的命令安装驱动：
+
+```shell
+$ go get github.com/go-sql-driver/mysql
+```
+
+然后，创建简单的客户端连接到数据库，并从 `transactions`表中查询数据。代码见清单7-7。
+
+```go
+package main
+
+import (
+	"database/sql"
+	"fmt"
+	"log"
+
+	_ "github.com/go-sql-driver/mysql"
+)
+
+func main() {
+	db, err := sql.Open("mysql", "root:password@tcp(127.0.0.1:3306)/store")
+	if err != nil {
+		log.Panicln(err)
+	}
+	defer db.Close()
+
+	var (
+		ccnum, date, cvv, exp string
+		amount                float32
+	)
+	rows, err := db.Query("SELECT ccnum, date, amount, cvv, exp FROM transactions")
+	if err != nil {
+		log.Panicln(err)
+	}
+	defer rows.Close()
+	for rows.Next() {
+		err := rows.Scan(&ccnum, &date, &amount, &cvv, &exp)
+		if err != nil {
+			log.Panicln(err)
+		}
+		fmt.Println(ccnum, date, amount, cvv, exp)
+	}
+	if rows.Err() != nil {
+		log.Panicln(err)
+	}
+}
+```
+
+清单 7-7: 连接并查询 MySQL 数据库 (https://github.com/blackhat-go/bhg/ch-7/db/mysql-connect/main.go/)
+
+代码从导入Go的 `database/sql` 包开始。这样一来，就可以使用Go中出色的标准SQL库与数据库进行交互。同样导入MySQL数据库驱动。前面的下划线表示是匿名导入包，也就是不包括包的导出的类型，但是驱动将自己注册到 `sql` 包中，以便MySQL驱动本身处理函数调用。
+
+接下来调用 `sql.Open` 和数据库建立连接。第一个参数指明要使用那种驱动——在本例中使用 `mysql` 驱动，第二个参数指明连接的字符串。然后查询数据库，使用SQL语句查询 `transactions` 表中的所有行，然后循环遍历这些行，随后将数据读入变量并打印值。
+
+这就是查询MySQL数据库所需要做的。使用不同的后端数据库仅需要对代码进行以下较小更改：
+
+1. 导入正确的数据库驱动。
+2. 修改传入到 `sql.Open()` 的参数。
+3. 将SQL语法调整为后端数据库所需的风格。
+
+在几种可用的数据库驱动程序中，许多是纯Go语言，而少数驱动使用 `cgo` 进行一些基础交互。访问 `https://github.com/golang/go/wiki/SQLDrivers/` 查看可用驱动程序列表。
