ch-7 Building a Database Miner

--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -269,3 +269,108 @@ func main() {
 3. 将SQL语法调整为后端数据库所需的风格。
 
 在几种可用的数据库驱动程序中，许多是纯Go语言，而少数驱动使用 `cgo` 进行一些基础交互。访问 `https://github.com/golang/go/wiki/SQLDrivers/` 查看可用驱动程序列表。
+
+## 构建数据库矿工
+
+在本节中，将创建一个检查数据库模式（例如列名）的工具，以确定其中的数据是否值得窃取。例如，假设希望查找密码、哈希、社保号和信用卡号。与其构建庞大功能来挖掘各种后端数据库，不如为每个数据创建单独的功能——实现一个定义的接口，以确保实现之间的一致性。对于本示例，这种灵活性可能有些过高，但是这是创建可重用和可移植性代码的好机会。
+
+接口应该小巧，由最基本的类型和函数组成，并且它应该需要实现一个方法来检索数据库模式。清单7-8是 *dbminer.go* ，定义了数据库旷工接口。
+
+```go
+package dbminer
+
+import (
+	"fmt"
+	"regexp"
+)
+
+type DatabaseMiner interface {
+	GetSchema() (*Schema, error)
+}
+
+type Schema struct {
+	Databases []Database
+}
+
+type Database struct {
+	Name   string
+	Tables []Table
+}
+
+type Table struct {
+	Name    string
+	Columns []string
+}
+
+func Search(m DatabaseMiner) error {
+	s, err := m.GetSchema()
+	if err != nil {
+		return err
+	}
+
+	re := getRegex()
+	for _, database := range s.Databases {
+		for _, table := range database.Tables {
+			for _, field := range table.Columns {
+				for _, r := range re {
+					if r.MatchString(field) {
+						fmt.Println(database)
+						fmt.Printf("[+] HIT: %s\n", field)
+					}
+				}
+			}
+		}
+	}
+	return nil
+}
+
+func getRegex() []*regexp.Regexp {
+	return []*regexp.Regexp{
+		regexp.MustCompile(`(?i)social`),
+		regexp.MustCompile(`(?i)ssn`),
+		regexp.MustCompile(`(?i)pass(word)?`),
+		regexp.MustCompile(`(?i)hash`),
+		regexp.MustCompile(`(?i)ccnum`),
+		regexp.MustCompile(`(?i)card`),
+		regexp.MustCompile(`(?i)security`),
+		regexp.MustCompile(`(?i)key`),
+	}
+}
+
+func (s Schema) String() string {
+	var ret string
+	for _, database := range s.Databases {
+		ret += fmt.Sprint(database.String() + "\n")
+	}
+	return ret
+}
+
+func (d Database) String() string {
+	ret := fmt.Sprintf("[DB] = %+s\n", d.Name)
+	for _, table := range d.Tables {
+		ret += table.String()
+	}
+	return ret
+}
+
+func (t Table) String() string {
+	ret := fmt.Sprintf("    [TABLE] = %+s\n", t.Name)
+	for _, field := range t.Columns {
+		ret += fmt.Sprintf("       [COL] = %+s\n", field)
+	}
+	return ret
+}
+/* Extranneous code omitted for brevity */
+```
+
+清单 7-8: 实现数据库旷工 (https://github.com/blackhat-go/bhg/ch-7/db/dbminer/dbminer.go/)
+
+代码先定义 `DatabaseMiner` 接口。只有 `GetSchema()` 这一个方法，实现接口的任何类型都需要该方法。因为每个后端数据库可能有各自的逻辑来检索数据库模式，所以期望每个功能都以对所使用的后端数据库和驱动统一的方式来实现逻辑。
+
+接下来定义 `Schema` 类型，由在此处定义的一些类型组成。使用 `Schema` 在逻辑上表示数据库模式，即数据库，表，列。可以会注意到接口中定义的 ` GetSchema()` 函数，其实现的返回值为 `*Schema` 。
+
+现在定义了 `Search()` 这个函数，其中包含大部分逻辑。调用`Search() `函数时需要传入 `DatabaseMiner` 实例，并且在 `m` 变量中保存矿工值。函数通过调用 `m.GetSchema()` 检索数据库模式开始。函数然后循环遍历整个模式，在正则表达式（regex）值列表中搜索与之匹配的列名。如果找到匹配的话，数据库模式和匹配的字段被打印到屏幕上。
+
+最后定义 `getRegex()` 函数。该函数通过使用Go的 `regexp` 包来过滤正则字符串，然后返回这些值的切片。正则表达式列表由不区分大小写的字符串组成，这些字符串与常见或有趣的字段名称（例如`ccnum`，`ssn`和`password`）匹配。
+
+有了数据库矿工的接口，就可以创建实现特定的功能。从MongoDB数据库矿工开始。
