--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -270,7 +270,7 @@ func main() {
 
 在几种可用的数据库驱动程序中，许多是纯Go语言，而少数驱动使用 `cgo` 进行一些基础交互。访问 `https://github.com/golang/go/wiki/SQLDrivers/` 查看可用驱动程序列表。
 
-## 构建数据库矿工
+## 构建数据库挖掘器
 
 在本节中，将创建一个检查数据库模式（例如列名）的工具，以确定其中的数据是否值得窃取。例如，假设希望查找密码、哈希、社保号和信用卡号。与其构建庞大功能来挖掘各种后端数据库，不如为每个数据创建单独的功能——实现一个定义的接口，以确保实现之间的一致性。对于本示例，这种灵活性可能有些过高，但是这是创建可重用和可移植性代码的好机会。
 
@@ -363,14 +363,133 @@ func (t Table) String() string {
 /* Extranneous code omitted for brevity */
 ```
 
-清单 7-8: 实现数据库旷工 (https://github.com/blackhat-go/bhg/ch-7/db/dbminer/dbminer.go/)
+清单 7-8: 实现数据库挖掘器 (https://github.com/blackhat-go/bhg/ch-7/db/dbminer/dbminer.go/)
 
 代码先定义 `DatabaseMiner` 接口。只有 `GetSchema()` 这一个方法，实现接口的任何类型都需要该方法。因为每个后端数据库可能有各自的逻辑来检索数据库模式，所以期望每个功能都以对所使用的后端数据库和驱动统一的方式来实现逻辑。
 
 接下来定义 `Schema` 类型，由在此处定义的一些类型组成。使用 `Schema` 在逻辑上表示数据库模式，即数据库，表，列。可以会注意到接口中定义的 ` GetSchema()` 函数，其实现的返回值为 `*Schema` 。
 
-现在定义了 `Search()` 这个函数，其中包含大部分逻辑。调用`Search() `函数时需要传入 `DatabaseMiner` 实例，并且在 `m` 变量中保存矿工值。函数通过调用 `m.GetSchema()` 检索数据库模式开始。函数然后循环遍历整个模式，在正则表达式（regex）值列表中搜索与之匹配的列名。如果找到匹配的话，数据库模式和匹配的字段被打印到屏幕上。
+现在定义了 `Search()` 这个函数，其中包含大部分逻辑。调用`Search() `函数时需要传入 `DatabaseMiner` 实例，并且在 `m` 变量中保存挖掘器值。函数通过调用 `m.GetSchema()` 检索数据库模式开始。函数然后循环遍历整个模式，在正则表达式（regex）值列表中搜索与之匹配的列名。如果找到匹配的话，数据库模式和匹配的字段被打印到屏幕上。
 
 最后定义 `getRegex()` 函数。该函数通过使用Go的 `regexp` 包来过滤正则字符串，然后返回这些值的切片。正则表达式列表由不区分大小写的字符串组成，这些字符串与常见或有趣的字段名称（例如`ccnum`，`ssn`和`password`）匹配。
 
-有了数据库矿工的接口，就可以创建实现特定的功能。从MongoDB数据库矿工开始。
+有了数据库挖掘器的接口，就可以创建实现特定的功能。从MongoDB数据库挖掘器开始。
+
+### 实现MongoDB数据挖掘器
+
+清单7-9中的MongoDB的功能程序实现了清单7-8中定义的接口，同时还集成了在清单7-6中构建的数据库连接代码。
+
+```go
+package main
+
+import (
+	"os"
+
+	"gopkg.in/mgo.v2"
+	"gopkg.in/mgo.v2/bson"
+	"github.com/blackhat-go/bhg/ch-7/db/dbminer"
+)
+
+type MongoMiner struct {
+	Host    string
+	session *mgo.Session
+}
+
+func New(host string) (*MongoMiner, error) {
+	m := MongoMiner{Host: host}
+	err := m.connect()
+	if err != nil {
+		return nil, err
+	}
+	return &m, nil
+}
+
+func (m *MongoMiner) connect() error {
+	s, err := mgo.Dial(m.Host)
+	if err != nil {
+		return err
+	}
+	m.session = s
+	return nil
+}
+
+func (m *MongoMiner) GetSchema() (*dbminer.Schema, error) {
+	var s = new(dbminer.Schema)
+
+	dbnames, err := m.session.DatabaseNames()
+	if err != nil {
+		return nil, err
+	}
+
+	for _, dbname := range dbnames {
+		db := dbminer.Database{Name: dbname, Tables: []dbminer.Table{}}
+		collections, err := m.session.DB(dbname).CollectionNames()
+		if err != nil {
+			return nil, err
+		}
+
+		for _, collection := range collections {
+			table := dbminer.Table{Name: collection, Columns: []string{}}
+
+			var docRaw bson.Raw
+			err := m.session.DB(dbname).C(collection).Find(nil).One(&docRaw)
+			if err != nil {
+				return nil, err
+			}
+
+			var doc bson.RawD
+			if err := docRaw.Unmarshal(&doc); err != nil {
+				if err != nil {
+					return nil, err
+				}
+			}
+
+			for _, f := range doc {
+				table.Columns = append(table.Columns, f.Name)
+			}
+			db.Tables = append(db.Tables, table)
+		}
+		s.Databases = append(s.Databases, db)
+	}
+	return s, nil
+}
+
+func main() {
+
+	mm, err := New(os.Args[1])
+	if err != nil {
+		panic(err)
+	}
+	if err := dbminer.Search(mm); err != nil {
+		panic(err)
+	}
+}
+```
+
+清单 7-9: 创建 MongoDB 数据库挖掘器 (https://github.com/blackhat-go/bhg/ch-7/db/mongo/main.go/)
+
+从导入定义了`Database Miner`接口的 `dbminer` 包开始。然后定义了用于实现接口的 `MongoMiner` 类型。为了方便起见，定义 `New()` 函数来创建 `MongoMiner` 类型的新实例，该函数调用 `connect()` 和数据库建立连接。该逻辑的整体实质上是启动代码，并
+以类似于清单7-6中所讨论的方式连接到数据库。
+
+代码中最有趣的部分是实现 `GetSchema()` 接口方法。与清单7-6中之前的MongoDB示例代码不同，现在检查MongoDB的元数据，先获取数据库名字，然后循环遍历数据库来检索每个数据库的集合名字。函数的最后检索原始文档，与典型的MongoDB查询不同，此处使用懒惰解析。这样可以将记录显式地解析到通用结构，如此以来就可以检查字段名称。如果不使用懒惰解析，必须定义明确的类型，可能使用 `bson` 属性，以便指示代码如何将数据解析到定义的结构体中。在这种情况下，无需知道（或关心）结构体的字段类型，而只需要字段名称（而不是数据），因此，这是可以在事先不了解数据结构的情况下解析结构化数据的方法。
+
+`main()` 函数将MongoDB实例的IP地址作为其唯一参数，调用 `New()` 函数来启动，然后调用 `dbminer.Search()`，传入 `MongoMiner` 实例。回想在接收到的 `DatabaseMiner` 实例时 `dbmine . search()` 调用 `GetSchema()`；这将调用该函数的 `MongoMiner` 实现，从而创建 `dbminer`，然后根据清单7-8中的正则表达式列表搜索。
+
+当运行程序时，将得到以下输出:
+
+```shell
+$ go run main.go 127.0.0.1 
+[DB] = store
+	[TABLE] = transactions 
+		[COL] = _id
+		[COL] = ccnum 
+		[COL] = date 
+		[COL] = amount 
+		[COL] = cvv 
+		[COL] = exp
+[+] HIT: ccnum
+```
+
+匹配成功了！看起来可能不美观，但它完成了任务——成功地定位了有一个名为 `ccnum` 字段的数据库集合。
+
+在下一部分中，构建完MongoDB实现后，将对MySQL后端数据库执行相同的操作。
