ch-7 Implementing a MySQL Database Miner

--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -375,7 +375,7 @@ func (t Table) String() string {
 
 有了数据库挖掘器的接口，就可以创建实现特定的功能。从MongoDB数据库挖掘器开始。
 
-### 实现MongoDB数据挖掘器
+### 实现MongoDB数据库挖掘器
 
 清单7-9中的MongoDB的功能程序实现了清单7-8中定义的接口，同时还集成了在清单7-6中构建的数据库连接代码。
 
@@ -493,3 +493,155 @@ $ go run main.go 127.0.0.1
 匹配成功了！看起来可能不美观，但它完成了任务——成功地定位了有一个名为 `ccnum` 字段的数据库集合。
 
 在下一部分中，构建完MongoDB实现后，将对MySQL后端数据库执行相同的操作。
+
+### 实现**MySQL**数据库挖掘器
+
+要使MySQL正常执行，需要检查 `information _schema.columns` 表。该表持有所有的数据库及其结构的元数据，包括表明和列名。要最简单的使用数据，使用下面的SQL查询，该查询删除了与某些内置MySQL数据库无关的信息，这些信息与掠夺工作无关：
+
+```mysql
+SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME FROM columns
+	WHERE TABLE_SCHEMA NOT IN ('mysql', 'information_schema', 'performance_schema', 'sys') 
+	ORDER BY TABLE_SCHEMA, TABLE_NAME
+```
+
+该查询产生类似于以下内容的结果：
+
+```mysql
++--------------+--------------+-------------+ 
+| TABLE_SCHEMA |  TABLE_NAME  | COLUMN_NAME | 
++--------------+--------------+-------------+
+| store 	   | transactions | ccnum       |
+| store		   | transactions | date        |
+| store 	   | transactions | amount      |
+| store 	   | transactions | cvv         |
+| store 	   | transactions | exp         |
+--snip--
+```
+
+尽管使用查询来检索模式信息非常直接，但是代码的复杂性来自逻辑上在定义 `GetSchema()` 函数时对每行进行区分和分类。例如，连续的输出行可能属于或不属于同一数据库或表，因此将行和正确的 `dbminer .Database` 和 `dbminer.Table` 实例关联起来变的有点棘手，
+
+清单7-10定义了实现。
+
+```go
+package main
+
+import (
+	"database/sql"
+	"fmt"
+	"log"
+	"os"
+
+	_ "github.com/go-sql-driver/mysql"
+	"github.com/blackhat-go/bhg/ch-7/db/dbminer"
+)
+
+type MySQLMiner struct {
+	Host string
+	Db   sql.DB
+}
+
+func New(host string) (*MySQLMiner, error) {
+	m := MySQLMiner{Host: host}
+	err := m.connect()
+	if err != nil {
+		return nil, err
+	}
+	return &m, nil
+}
+
+func (m *MySQLMiner) connect() error {
+
+	db, err := sql.Open("mysql", fmt.Sprintf("root:password@tcp(%s:3306)/information_schema", m.Host))
+	if err != nil {
+		log.Panicln(err)
+	}
+	m.Db = *db
+	return nil
+}
+
+func (m *MySQLMiner) GetSchema() (*dbminer.Schema, error) {
+	var s = new(dbminer.Schema)
+
+	sql := `SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME FROM columns
+	WHERE TABLE_SCHEMA NOT IN ('mysql', 'information_schema', 'performance_schema', 'sys')
+	ORDER BY TABLE_SCHEMA, TABLE_NAME`
+	schemarows, err := m.Db.Query(sql)
+	if err != nil {
+		return nil, err
+	}
+	defer schemarows.Close()
+
+	var prevschema, prevtable string
+	var db dbminer.Database
+	var table dbminer.Table
+	for schemarows.Next() {
+		var currschema, currtable, currcol string
+		if err := schemarows.Scan(&currschema, &currtable, &currcol); err != nil {
+			return nil, err
+		}
+
+		if currschema != prevschema {
+			if prevschema != "" {
+				db.Tables = append(db.Tables, table)
+				s.Databases = append(s.Databases, db)
+			}
+			db = dbminer.Database{Name: currschema, Tables: []dbminer.Table{}}
+			prevschema = currschema
+			prevtable = ""
+		}
+
+		if currtable != prevtable {
+			if prevtable != "" {
+				db.Tables = append(db.Tables, table)
+			}
+			table = dbminer.Table{Name: currtable, Columns: []string{}}
+			prevtable = currtable
+		}
+		table.Columns = append(table.Columns, currcol)
+	}
+	db.Tables = append(db.Tables, table)
+	s.Databases = append(s.Databases, db)
+	if err := schemarows.Err(); err != nil {
+		return nil, err
+	}
+
+	return s, nil
+}
+
+func main() {
+	mm, err := New(os.Args[1])
+	if err != nil {
+		panic(err)
+	}
+	defer mm.Db.Close()
+
+	if err := dbminer.Search(mm); err != nil {
+		panic(err)
+	}
+}
+```
+
+清单 7-10: 创建 MySQL 数据库挖掘器 (https://github.com/blackhat-go/bhg/ch-7/db/mysql/main.go/)
+
+快速浏览下代码的话会发现和前一部分中MongoDB的示例代码非常非常相似。实际上，`main()` 函数是相同的。
+
+启动函数也非常相似——只需要将和MongoDB交互的逻辑改为和MySQL交互。注意，这是连接到 `information_schema` 数据库的逻辑，以便能够检查数据库模式。
+
+代码的大部分复杂性都位于 `GetSchema()` 的实现中。尽管使用单个数据库查询能够检索到数据库模式信息，然后循环遍历结果，检查每一行，以便确定存在哪些数据库，每个数据库中有哪些表，每个表中有哪些行。与MongoDB实现不同，无法使用带有属性标签的 **JSON / BSON** 来将数据编组和解编到复杂的结构；可以维护变量来跟踪当前行中的信息，并将其与上一行中的数据进行比较，以确定您是否遇到了新的数据库或表。这不是最优雅的解决方案，但是这也能工作。
+
+接下来，检查当前行的和前一行的数据库名字是否不同。如果是的话就创建新的 `miner.Database` 实例。如果这不是第一次循环，就将表和数据库添加到 `miner.Schema` 实例中。使用类似的逻辑来追踪并将 `miner.Table` 实例添加到当前的 `miner.Database` 中。最后，将每一列添加到 ` miner.Table` 。
+
+现在，针对 Docker MySQL 实例运行程序，确认是否工作正常，如下所示：
+
+```shell
+$ go run main.go 127.0.0.1 
+[DB] = store
+	[TABLE] = transactions 
+		[COL] = ccnum
+		[COL] = date
+		[COL] = amount [COL] = cvv
+		[COL] = exp 
+[+] HIT: ccnum
+```
+
+输出应该与MongoDB输出几乎一样。这是因为 ` dbminer.Schema` 没有产生任何输出—— `dbminer .Search()` 函数是。这就是使用接口的威力。可以有关键特性的特定实现，但仍然可以使用单一的标准函数以可预测的、可用的方式处理数据。
