ch-7 Pillaging a Filesystem

--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -645,3 +645,76 @@ $ go run main.go 127.0.0.1
 ```
 
 输出应该与MongoDB输出几乎一样。这是因为 ` dbminer.Schema` 没有产生任何输出—— `dbminer .Search()` 函数是。这就是使用接口的威力。可以有关键特性的特定实现，但仍然可以使用单一的标准函数以可预测的、可用的方式处理数据。
+
+## 掠夺文件系统
+
+在本节中，构建个文件系统工具，其能够递归地遍历用户提供的文件系统路径，并与匹配一系列有趣的文件名，这些文件名在后面的开发的练习中会有用。这些文件可能包含个人身份信息、用户名、密码、系统登录和密码数据库文件。
+
+该工具专门针对于文件名而不是文件内容，脚本实际上非常简单，使用的是Go的 `path/filepath` 包中的标准函数，该包非常容易地遍历目录结构。该工具的代码参见清单 7-11。
+
+```go
+package main
+
+import (
+	"fmt"
+	"log"
+	"os"
+	"path/filepath"
+	"regexp"
+)
+
+var regexes = []*regexp.Regexp{
+	regexp.MustCompile(`(?i)user`),
+	regexp.MustCompile(`(?i)password`),
+	regexp.MustCompile(`(?i)kdb`),
+	regexp.MustCompile(`(?i)login`),
+}
+
+func walkFn(path string, f os.FileInfo, err error) error {
+	for _, r := range regexes {
+		if r.MatchString(path) {
+			fmt.Printf("[+] HIT: %s\n", path)
+		}
+	}
+	return nil
+}
+
+func main() {
+	root := os.Args[1]
+	if err := filepath.Walk(root, walkFn); err != nil {
+		log.Panicln(err)
+	}
+}
+```
+
+清单 7-11: 遍历并搜索文件系统 (https://github.com/blackhat-go/bhg/ch-7/filesystem/main.go/)
+
+和数据库挖掘的实现相对比，文件系统的设置和逻辑似乎有点太简单了。与创建数据库实现的方式类似，定义一个正则表达式列表来识别有趣的文件名。为了使代码最少，我们将列表限制为少数几个条目，但是可以扩展列表以适应更多实际用途。
+
+接下来，定义 `walkFn()` 函数，该函数的参数为文件路径和一些额外的参数，该函数循环遍历正则表达式列表并检查匹配，显示到标准输出。`walkFn()` 函数被用在 `main()` 函数中，并作为参数传递给 `filepath.Walk()` 。` Walk()` 函数有两个参数，一个根路径和一个函数（这里是 `walkFn()`）。并从作为根路径提供的值开始递归遍历目录结构，为遇到的每个目录和文件调用 `walkFn()` 。
+
+工具完成后，回到桌面并创建以下目录结构： 
+
+```shell
+$ tree targetpath/ 
+targetpath/
+--- anotherpath
+-	--- nothing.txt
+-	--- users.csv
+--- file1.txt
+--- yetanotherpath 
+	--- nada.txt
+	--- passwords.xlsx 
+2 directories, 5 files
+```
+
+在同一个 `targetpath` 目录下运行你的工具会产生以下输出，确认了代码可以出色地执行：
+
+```shell
+$ go run main.go ./somepath
+[+] HIT: somepath/anotherpath/users.csv
+[+] HIT: somepath/yetanotherpath/passwords.xlsx
+```
+
+这就是全部的内容。可以通过包含额外的或更特定的正则表达式来改进示例代码。此外，我们鼓励您通过仅对文件名而不对目录应用正则表达式检查来改进代码。我们鼓励您进行的另一项增强功能是查找和标记具有最近修改或访问时间的特定文件。该元数据可以引导您获得更重要的内容，包括用作关键业务流程一部分的文件。
+
