--- a/ch-7/第7章：数据库和文件系统：盗用和滥用.md
+++ b/ch-7/第7章：数据库和文件系统：盗用和滥用.md
@@ -718,3 +718,8 @@ $ go run main.go ./somepath
 
 这就是全部的内容。可以通过包含额外的或更特定的正则表达式来改进示例代码。此外，我们鼓励您通过仅对文件名而不对目录应用正则表达式检查来改进代码。我们鼓励您进行的另一项增强功能是查找和标记具有最近修改或访问时间的特定文件。该元数据可以引导您获得更重要的内容，包括用作关键业务流程一部分的文件。
 
+## 总结
+
+在这一章，深入研究了数据库交互和文件系统遍历，即使用了Go的原生包，又使用了第三方库来和数据库元数据和文件系统交互。作为攻击者，这些资源经常包含有价值的信息，并且我们创建了各种实用程序，使我们可以搜索这些有趣的信息。
+
+在下一章中，将了解实际的数据包处理。具体来说，将学习如何嗅探和操作网络包。
