ch-9 Creating Shellcode in Go

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -916,3 +916,10 @@ uid=0(root) gid=1000(alice) groups=0(root),4(adm),1000(alice)
 
 如看见的那也，程序成功运行将备份/usr/bin /passwd文件，争夺句柄的控制权，用新的预期值覆盖文件位置，并最终生成一个系统shell。Linux id命令的输出确认alice帐户已经被提升到uid=0的值，表示root级别的特权。
 
+### 用Go创建 Shellcode
+
+在上一节中，使用正当的ELF格式的原始shellcode，用恶意的替代方法覆盖了一个合法文件。如何自己生成这个shellcode ?事实证明，可以使用特有的工具生成支持Go的shellcode。
+
+我们将介绍如何使用命令行程序 `msfvenom` 进行此操作，但是我们教的是整体技术，并非是专门工具。可以使用几种方法来处理外部的二进制数据，无论是shellcode还是其他东西，并将其集成到Go代码中。请放心，以下页面更多地处理公共数据表示，而不是特定于某个工具的任何内容。
+
+Metasploit框架是一个流行的开发和后开发工具包，它附带了 `msfvenom`，该工具可以生成任何Metasploit可用的有效负载，并将其转换为通过 `-f` 参数指定的各种格式。不幸的是，没有明确的Go转换。然而，只要稍加调整，就可以很容易地将几种格式集成到Go代码中。我们将在这里探索其中的5种格式：`C，hex，num，raw和Base64`，同时请记住，我们的最终目标是在Go中创建字节切片。
