--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -923,3 +923,26 @@ uid=0(root) gid=1000(alice) groups=0(root),4(adm),1000(alice)
 我们将介绍如何使用命令行程序 `msfvenom` 进行此操作，但是我们教的是整体技术，并非是专门工具。可以使用几种方法来处理外部的二进制数据，无论是shellcode还是其他东西，并将其集成到Go代码中。请放心，以下页面更多地处理公共数据表示，而不是特定于某个工具的任何内容。
 
 Metasploit框架是一个流行的开发和后开发工具包，它附带了 `msfvenom`，该工具可以生成任何Metasploit可用的有效负载，并将其转换为通过 `-f` 参数指定的各种格式。不幸的是，没有明确的Go转换。然而，只要稍加调整，就可以很容易地将几种格式集成到Go代码中。我们将在这里探索其中的5种格式：`C，hex，num，raw和Base64`，同时请记住，我们的最终目标是在Go中创建字节切片。
+
+#### C转换
+
+如果指定了C转换类型，`msfvenom`将直接以C代码中的格式生成有效负载。这似乎是逻辑上的首选，因为在本章前面我们详细介绍了C和Go之间的许多相似之处。但是，它并不是我们Go代码的最佳选则。为了说明原因，请查看以下C格式的示例输出：
+
+```C
+unsigned char buf[] = 
+"\xfc\xe8\x82\x00\x00\x00\x60\x89\xe5\x31\xc0\x64\x8b\x50\x30"
+"\x8b\x52\x0c\x8b\x52\x14\x8b\x72\x28\x0f\xb7\x4a\x26\x31\xff" 
+--snip--
+"\x64\x00";
+```
+
+我们几乎只对有效负载感兴趣。为了使Go支持，必须删除分号并改变换行符。这意味着要么在除最后一行外的所有行的末尾添加 `+` 号来显式连接每一行，要么完全删除换行符成为长字符串。对于小的有效负载，这样做是可以接受的，但是对于大的有效负载，手动这样做会很繁琐。可能会需要使用其他Linux命令，如 `sed` 和 `tr` 来清理。
+
+清理有效负载后，将把有效负载作为字符串。要创建字节切片，需要输入以下内容：
+
+```Go
+payload := []byte("\xfc\xe8\x82...").
+```
+
+这是个不错的解决办法，但还可以做得更好。
+
