ch-9 Hex Transform

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -946,3 +946,18 @@ payload := []byte("\xfc\xe8\x82...").
 
 这是个不错的解决办法，但还可以做得更好。
 
+#### Hex 转换
+
+在改进之前的尝试后，来看一个 `hex` 转换。使用这种格式，`msfvenom` 会生成一个长的十六进制字符串：
+
+```C
+fce8820000006089e531c0648b50308b520c8b52148b72280fb74a2631ff...6400
+```
+
+如果这种格式看起来很熟悉，因为在移植Java反序列化漏洞时使用过。把该值作为字符串传递到对 `hex.DecodeString()` 的调用中。如果存在，它将返回一个字节切片和错误详情。可以这样使用它：
+
+```Go
+payload, err := hex.DecodeString("fce8820000006089e531c0648b50308b520c8b52148b 72280fb74a2631ff...6400")
+```
+
+把它翻译成Go是相当简单的。所要做的就是将字符串用双引号括起来，并将其传递给函数。但是，较大的有效负载将会是一个不美观的字符串，引号可能超出页边距。可以继续使用这种格式，但是如果希望代码既实用又美观，我们提供了第三种选择。
