ch-9 Num Transform

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -961,3 +961,28 @@ payload, err := hex.DecodeString("fce8820000006089e531c0648b50308b520c8b52148b 7
 ```
 
 把它翻译成Go是相当简单的。所要做的就是将字符串用双引号括起来，并将其传递给函数。但是，较大的有效负载将会是一个不美观的字符串，引号可能超出页边距。可以继续使用这种格式，但是如果希望代码既实用又美观，我们提供了第三种选择。
+
+#### Num 转换
+
+`num` 转换以十六进制的数字格式生成一个以逗号分隔的字节列表：
+
+```
+0xfc, 0xe8, 0x82, 0x00, 0x00, 0x00, 0x60, 0x89, 0xe5, 0x31, 0xc0, 0x64, 0x8b, 0x50, 0x30, 
+0x8b, 0x52, 0x0c, 0x8b, 0x52, 0x14, 0x8b, 0x72, 0x28, 0x0f, 0xb7, 0x4a, 0x26, 0x31, 0xff, 
+--snip--
+0x64, 0x00
+
+```
+
+可以直接用来初始化字节切片，如下所示：
+
+```Go
+payload := []byte{
+	0xfc, 0xe8, 0x82, 0x00, 0x00, 0x00, 0x60, 0x89, 0xe5, 0x31, 0xc0, 0x64, 0x8b, 0x50, 0x30, 
+    0x8b, 0x52, 0x0c, 0x8b, 0x52, 0x14, 0x8b, 0x72, 0x28, 0x0f, 0xb7, 0x4a, 0x26, 0x31, 0xff, 
+    --snip--
+	0x64, 0x00,
+}
+```
+
+由于 `msfvenom` 输出是逗号分隔的，因此字节列表可以很好地跨行包装，而不必笨拙地附加数据集。唯一需要做的修改是在列表的最后一个元素后面添加一个逗号。这种输出格式很容易集成到Go代码中，格式也很好。
