ch-9  Base64 Encoding

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -1006,3 +1006,27 @@ $ msfvenom -p [payload] [options] –f raw | xxd -i
 
 和上一节一样，可以将结果直接赋值给一个字节切片。
 
+#### Base64 编码
+
+尽管 `msfvenom` 不包含纯Base64编码，但遇到Base64格式的二进制数据（包括shellcode）也非常普遍的。Base64编码可能增大数据的长度，但也可以避免使用丑陋或无法使用的原始二进制数据。例如，与`num`相比，此格式在代码中更易于使用，并且可以简化HTTP等协议的数据传输。因此，值得讨论Go中的用法。
+
+生成二进制数据的Base64编码表示形式的最简单方法是在Linux中使用 `base64` 程序。可以通过标准输入或文件来编码或解码数据。可以使用 `msfvenom` 生成原始二进制数据，然后使用以下命令对结果进行编码：
+
+```shell
+$ msfvenom -p [payload] [options] –f raw | base64
+```
+
+与C输出非常相似，生成的有效负载包含换行符，作为字符串用在代码中时，必须先对其进行处理。可以在Linux中使用 `tr` 工具删除所有换行符：
+
+```shell
+$ msfvenom -p [payload] [options] –f raw | base64 | tr –d "\n"
+```
+
+编码后有效负载现在以连续字符串的形式存在。然后，在Go代码中，可以通过解码字符串将原始有效负载作为字节切片获取。使用`encoding/base64` 包来完成：
+
+```Go
+payload, err := base64.StdEncoding.DecodeString("/OiCAAAAYInlMcBki1Awi...WFuZAA=")
+```
+
+现在能够无障碍地处理原始的二进制数据了。
+
