--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -1033,3 +1033,9 @@ payload, err := base64.StdEncoding.DecodeString("/OiCAAAAYInlMcBki1Awi...WFuZAA=
 #### 关于汇编的说明
 
 不涉及汇编的讨论shellcode和底层编程是不完整的。不幸的是，对于shellcode开发人员和汇编人员来说，Go与汇编的集成是有限的。与C不同，Go不支持内联汇编。如果把汇编集成到Go代码中，可以这么做。实际上，必须在Go中定义函数原型，并在单独的文件中使用汇编指令。然后，运行 `go build` 来编译，链接和构建最终的可执行文件。尽管看起来并不让人畏惧，但问题在于汇编语言本身。Go只支持基于Plan 9操作系统的汇编。这个系统是由贝尔实验室发明的，并在20世纪末使用。包括可用的指令和操作码在内的汇编语法几乎不存在。这使得编写纯Plan 9汇编成为一项艰巨的任务，几乎是不可能完成的任务。
+
+### 总结
+
+尽管缺乏汇编可用性，但Go的标准包里提供了大量利于挖洞的功能。本章介绍了混淆、移植漏洞和处理二进制数据，还有shellcode。作为额外的学习，我们建议您访问https://www.exploit-db.com/来探索漏洞数据库，并尝试将现有的漏洞移植到Go中。这个任务繁重基于对源语言的熟练程度，但可以成为理解数据操作、网络通信和底层系统交互的绝佳机会。
+
+在下一章中，我们的重点不在开发上，而专注于生成可扩展的工具集。
